# trait_sys_proto

./: .clang-format-custom-llvm  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  main.unit.test.cpp
inc/: Printer.hpp  TestData.hpp  TestDataDependency.hpp  TestDataDependencyPrinter.hpp  TestDataPrinter.hpp
inc/lib/: FractalsTraits.hpp
